styles.css
:root {
    --navy: #15181f;
    --darknavy: #0a0d12;
    --darkgrey: #38383e;
    --lightgrey: #9e9e9e;
    --white: #ffffff;
    --electricblue: #49bec2;
    --electricbluergb: 73, 190, 194;
}

body {
    background-color: var(--navy);
    color: var(--lightgrey);
}

h1, h2 {
    font-family: 'Cabin', sans-serif;
    font-weight: 700;
}

h3, h4 {
    font-family: 'Cabin', sans-serif;
    font-weight: 600;
}

.title {
    font-family: 'Cabin', sans-serif;
    font-weight: 400;
}

p, li {
    font-family: 'Noto Serif', serif;
}

.header {
    padding: 1rem 5% 1rem 5%;
    margin: auto 0;
    height: 100%;
}

.emphasis {
    color: var(--white);
}

.resume {
    height: 100vh;
    overflow-y: scroll;
    padding: 0 5% 0 5%;
}

.nav-section {
    margin: 2rem 0 3rem 0;
}

.accordion {
    background-color: var(--navy);
    color: var(--lightgrey);
    cursor: pointer;
    padding: 1rem;
    width: 100%;
    text-align: left;
    border: none;
    border-bottom: 0.5px solid var(--lightgrey);
    transition: 0.4s;
}

.accordion p {
    margin-bottom: 0;
}

.accordion:hover {
    background-color: var(--darknavy);
}

.accordion.active {
    background-color: var(--darknavy);
}

.logos {
    width: 25px;
    margin-right: 8px;
    margin-bottom: 5px;
}

.panel {
    padding: 0 1rem;
    background-color: var(--navy);
    overflow: hidden;
    max-height: 0;
    transition: max-height 0.3s ease-out;
}

.panel ul {
    margin: 1rem 0;
    padding-left: 0.5rem;
}

.panel li {
    margin-bottom: 0.5rem;
}

.skills {
    margin-bottom: 1rem;
}

.skill {
    background-color: rgba(var(--electricbluergb), 0.2);
    margin: 0.25rem 0 0.25rem 0;
    color: var(--electricblue);
    padding: 0px 0.5rem;
    border-radius: 20px;
    display: inline-block;
}

.bi {
    -webkit-text-stroke: 1px;
    color: var(--lightgrey);
}

.project-img {
    width: 100%;
}

.project {
    background-color: var(--darknavy);
    border-radius: 15px;
    padding: 1rem 0;
    margin: 0.5rem 0 0.5rem 0;
    transition: 0.4s;
}

.project:hover {
    background-color: var(--darknavy);
}

.project a {
    text-decoration: none;
}

.project a:hover {
    color: var(--electricblue);
}

.project .bi {
    color: inherit;
}

.contact-icons {
    -webkit-text-stroke: 0.5px;
    color: var(--electricblue);
    font-size: 2rem;
    margin: 0 0.5rem 0 0;
}

.contact-icons:hover {
    color: var(--white);
}

.footer {
    position: fixed;
    bottom: 0;
    right: 0;
    z-index: 1030;
}

#me {
    width: 300px;
    float: left;
    margin: 0 1.5rem 1rem 0;
    border-radius: 50%;
}

#logoSmall {
    max-height: 30px;
    float: right;
    margin: 1rem;
}

/* BREAKPOINT RESPONSIVENESS */
@media (max-width: 767px){
    #me {
        width: 100px;
        margin: 0 0.5rem 0.5rem 0;
    }
}

@media (max-width: 991px) {
    .projects {
        margin-bottom: 0.5rem;
    }

    #logoFull {
        display: none;
    }

    #logoSmall {
        display: block;
    }
}

